--- a/page4.html
+++ b/page4.html
@@ -72,7 +72,7 @@
                     <div class="card-box align-center">
                         <h4 class="card-title mbr-fonts-style align-center mb-4 display-1"><strong>Soon</strong></h4>
                         
-                        <div class="mbr-section-btn mt-3"><a class="btn btn-warning display-4" href="e.g. https://forms.zohopublic.com/vepcem/form/VEPCEMREGISTRATIONS/formperma/Rv1MPu_pB_T9GeNY0NKlSr7OzGUHAqe1B4v0Tykrnhw" target="_blank">Registration</a></div>
+                        <div class="mbr-section-btn mt-3"><a class="btn btn-warning display-4" href="https://forms.zoho.com/vepcem/form/VEPCEMREGISTRATIONS" target="_blank">Registration</a></div>
                     </div>
                 </div>
             </div>
@@ -118,7 +118,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/n" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Built with Mobirise - <a href="https://mobirise.site/l" style="color:#aaa;">Find out</a></p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/g" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">How to build your own site - <a href="https://mobirise.site/x" style="color:#aaa;">Click for more</a></p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
