--- a/page6.html
+++ b/page6.html
@@ -68,7 +68,7 @@
         <div class="row align-items-center">
             <div class="col-12 col-lg-6">
                 <div class="image-wrapper">
-                    <a href="http://lattes.cnpq.br/3557992461593136 " target="_blank"><img src="assets/images/marcelo-knobel-1076x1286.png" alt="Mobirise"></a>
+                    <a href="http://lattes.cnpq.br/3557992461593136 " target="_blank"><img src="assets/images/marcelo-knobel-854x1280.jpg" alt="Mobirise"></a>
                     <p class="mbr-description mbr-fonts-style pt-2 align-center display-4"><strong>
                     <a href="http://lattes.cnpq.br/3557992461593136 " class="text-primary" target="_blank"><b>Prof. Dr. Marcelo Knobel</b></a></strong> (Universidade Estadual de Campinas, Instituto de Física Gleb Wataghin, Departamento de Física do Estado Sólido e Ciência dos Materiais).  <em>Bolsista de Produtividade em Pesquisa do CNPq - Nível 1A</em></p>
                 </div>
@@ -93,16 +93,15 @@
         <div class="row align-items-center">
             <div class="col-12 col-lg-6">
                 <div class="image-wrapper">
-                    <a href="http://lattes.cnpq.br/4662273973783290" target="_blank"><img src="assets/images/silvia-guterres-1076x1267.png" alt="Mobirise"></a>
-                    <p class="mbr-description mbr-fonts-style mt-2 align-center display-4"><strong>
-                        <a href="http://lattes.cnpq.br/4662273973783290" class="text-primary" target="_blank"><b>Profa. Dra. Silvia</b> <b>Staniscuaski Guterres</b></a></strong> (Universidade Federal do Rio Grande do Sul, Faculdade de Farmácia, Departamento de Produção e Controle de Medicamentos).  <em>Bolsista de Produtividade em Pesquisa do CNPq - Nível 1A</em></p>
+                    <a href="https://www.chem.ubc.ca/orlando-rojas" target="_blank"><img src="assets/images/orlando-225x225.png" alt="Mobirise"></a>
+                    <p class="mbr-description mbr-fonts-style mt-2 align-center display-4"><a href="https://www.chem.ubc.ca/orlando-rojas" class="text-primary" target="_blank"><strong>Prof. Dr. Orlando Rojas</strong></a>&nbsp; (Professor and Canada Excellence Research Chair, Departments of Chemical &amp; Biological Engineering, Chemistry, Wood Science, Vancouver Campus, Canadá)</p>
                 </div>
             </div>
             <div class="col-12 col-lg">
                 <div class="text-wrapper">
-                    <h3 class="mbr-section-title mbr-fonts-style mb-3 display-5"><strong>Palestra 2 - Nanomateriais para liberação de bioativos</strong></h3>
+                    <h3 class="mbr-section-title mbr-fonts-style mb-3 display-5"><strong>Palestra 2 - Biocolóides e Materiais renováveis</strong></h3>
                     <p class="mbr-text mbr-fonts-style display-7">
-                        Profa. Silvia S. Guterres é graduada em Farmácia pela Faculdade de Farmácia pela UFRGS (1985), mestre pelo Programa de Pós-Graduação Ciências Farmacêuticas pela UFRGS (1990) e doutora pela Faculté de Pharmacie-Université de Paris XI (1995). É professora titular da UFRGS, atua na área de nanobiotecnologia farmacêutica. Publicou mais de 340 artigos indexados, depositou mais de 60 patentes, organizou 5 livros e é co-autora de 20 capítulos de livros. Orientou 44 dissertações de mestrado e 32 teses de doutorado. Coordenou projetos de pesquisa no âmbito do CNPq, FAPERGS e FINEP, assim como foi a Coordenadora de Rede Nanocosméticos (CNPq), de convênio CAPES/COFECUB, da Rede Brasil França de Nanotecnologia e de projetos de cooperação internacional (CNPq) com o México, Cuba e Alemanha. É coordenadora brasileira de projetos de cooperação internacional com a Universidade de Coimbra (FCT), com a Universidade de Parma (Erasmus) e com a Universidade de Harvard (FAPERGS). Atualmente é membro titular da Academia de Ciências Farmacêuticas desde 2017 e da Academia Brasileira de Ciências desde 2020. Atualmente é Coordenadora de Área da Farmácia na CAPES e membro do Comitê Consultivo de Nanotecnologia e Novos Materiais (CCNANOMAT) do Ministério de Ciência, Tecnologia e Inovações.</p>
+                        Prof. Orlando Rojas recebeu seu Ph.D. em Engenharia Química pela Auburn University (1998), seguido por uma nomeação como Pesquisador Sênior no Royal Institute of Technology, KTH e no Institute for Surface Chemistry, YKI, ambos em Estocolmo. Atualmente, o Prof. Rojas é um Canadá Excellence Research Chair na conceituada University of British Columbia, em um programa que apoia cientistas de renome mundial. Nesta condição é Diretor do Instituto de Bioprodutos e compartilha afiliação com três Departamentos de Engenharia Química e Biológica, Química e Ciência da Madeira. Parte do seu grupo de pesquisa (Bio-based Colloids and Materials) também atua na Aalto University, Finlândia, onde é professor visitante e, anteriormente, professor nos departamentos de Bioprodutos e Biossistemas e Física Aplicada (2013), após sua gestão como Professor do Departamento de Biomateriais Florestais da North Carolina State University (NCSU, 2004–2013). Prof. Rojas tem mais 400 artigos indexados, mais de 27.000 citações e fator H=74.</p>
                 </div>
             </div>
         </div>
@@ -151,7 +150,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/g" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Mobirise free maker - <a href="https://mobirise.site/o" style="color:#aaa;">More info</a></p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/b" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Set up your own site - <a href="https://mobirise.site/w" style="color:#aaa;">Visit site</a></p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
