--- a/page3.html
+++ b/page3.html
@@ -104,9 +104,9 @@
                 <div class="timeline-text-wrapper">
                     <h4 class="mbr-timeline-title mbr-fonts-style mb-4 display-5"><strong><b><a href="page7.html" class="text-black"><b>Palestras</b> <b>3</b></a>&nbsp;<a href="page6.html" class="text-black"><b>e 4</b></a></b></strong></h4>
                     <div class="image-wrapper mb-4">
-                        <a href="page7.html"><img src="assets/images/dia-2-v-535x262.png" alt="Mobirise" title=""></a>
+                        <a href="page7.html"><img src="assets/images/dia-2-v-2-498x236.png" alt="Mobirise" title=""></a>
                     </div>
-                    <p class="mbr-text mbr-fonts-style display-7"><strong><br>15:00 - 16:10 -</strong>&nbsp;Os desafios técnicos &amp; científicos do concreto zero carbono<br><strong>16:15 - 17:20</strong> - Ainda não definido<br></p>
+                    <p class="mbr-text mbr-fonts-style display-7"><strong><br>14:00 - 16:10 -</strong>&nbsp;Os desafios técnicos &amp; científicos do concreto zero carbono<br><strong>16:15 - 17:20</strong> - Celulose bacteriana: um material, múltiplas aplicações<br></p>
                 </div>
             </div>
             <span class="iconBackground"></span>
@@ -140,7 +140,7 @@
                     <div class="image-wrapper mb-4">
                         <a href="page9.html"><img src="assets/images/dia-4-v-430x203.png" alt="Mobirise" title=""></a>
                     </div>
-                    <p class="mbr-text mbr-fonts-style display-7"><strong>Palestra 7 -</strong>&nbsp;Microscopia eletrônica e sua potência na caracterização de materiais </p>
+                    <p class="mbr-text mbr-fonts-style display-7"><strong>16:15 - 17:20&nbsp;-</strong>&nbsp;Microscopia eletrônica e sua potência na caracterização de materiais </p>
                 </div>
             </div>
             <span class="iconBackground"></span>
@@ -234,7 +234,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/h" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/q" style="color:#aaa;">This website</a> was started with Mobirise site templates</p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/r" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/q" style="color:#aaa;">The web page</a> was designed with Mobirise website templates</p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
