--- a/page3.html
+++ b/page3.html
@@ -127,9 +127,9 @@
                 <div class="timeline-text-wrapper">
                     <h4 class="mbr-timeline-title mbr-fonts-style mb-4 display-5"><strong><a href="page8.html" class="text-black"><b>Palestras 5 e</b> </a>6</strong>&nbsp;</h4>
                     <div class="image-wrapper mb-4">
-                        <a href="page8.html"><img src="assets/images/dia-4-v-2-438x228.png" alt="Mobirise" title=""></a>
+                        <a href="page8.html"><img src="assets/images/dia-4-v-2-365x224.png" alt="Mobirise" title=""></a>
                     </div>
-                    <p class="mbr-text mbr-fonts-style display-7"><br><strong>16:15 - 17:20</strong> - Maravilhas dos vidros!<br></p>
+                    <p class="mbr-text mbr-fonts-style display-7"><br><strong>14:00 - 15:10</strong> - Zebrafish como sistema-modelo na caracterização da toxicidade de nanomateriais<br><strong>16:15 - 17:20</strong> - Maravilhas dos vidros!<br></p>
                 </div>
             </div>
         </div>
@@ -250,7 +250,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/y" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/i" style="color:#aaa;">Designed with Mobirise</a> website creator</p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/h" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Designed with Mobirise - <a href="https://mobirise.site/k" style="color:#aaa;">Check this</a></p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
